added earthquake filtering
